<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backImg"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:adjustViewBounds="false"
        android:scaleX="3"
        android:scaleY="3"
        android:src="@drawable/pp" />

    <LinearLayout
        android:id="@+id/mainLinear"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="5"
        tools:context="com.progress.mohak.signuplogin.MainActivity">

        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.75"
            android:background="@color/signup_bg"
            android:gravity="center">

            <app.android.rxwanandroidjava.widget.XEditText
                android:id="@+id/signup_username"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@null"
                android:hint="@string/user_name_hint"
                android:inputType="textCapSentences"
                android:visibility="gone" />

            <View
                android:id="@+id/view1"
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:layout_below="@+id/signup_username"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:background="@color/mainColor"
                android:visibility="gone" />

            <app.android.rxwanandroidjava.widget.XEditText
                android:id="@+id/signup_password"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signup_username"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="@null"
                android:hint="@string/user_password_hint"
                android:inputType="textPassword"
                android:visibility="gone" />

            <View
                android:id="@+id/view2"
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:layout_below="@+id/signup_password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:background="@color/mainColor"
                android:visibility="gone" />

            <app.android.rxwanandroidjava.widget.XEditText
                android:id="@+id/signup_password2"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signup_password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="@null"
                android:hint="@string/user_verify_password_hint"
                android:inputType="textPassword"
                android:visibility="gone" />

            <View
                android:id="@+id/view3"
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:layout_below="@+id/signup_password2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:background="@color/mainColor"
                android:visibility="gone" />

            <TextView
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/signup_password2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:gravity="center"
                android:rotation="90"
                android:text="@string/user_signup"
                android:textColor="@color/primaryText"
                android:textSize="14sp" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/relative2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4.25"
            android:background="@color/login_bg"
            android:gravity="center">


            <app.android.rxwanandroidjava.widget.XEditText
                android:id="@+id/login_username"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@null"
                android:hint="@string/user_name_hint"
                android:inputType="textCapSentences" />

            <View
                android:id="@+id/view4"
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:layout_below="@+id/login_username"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:background="@color/mainColor" />

            <app.android.rxwanandroidjava.widget.XEditText
                android:id="@+id/login_password"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_username"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:background="@null"
                android:hint="@string/user_password_hint"
                android:inputType="textPassword" />

            <View
                android:id="@+id/view5"
                android:layout_width="200dp"
                android:layout_height="1dp"
                android:layout_below="@+id/login_password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:background="@color/mainColor" />

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/login_password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="80dp"
                android:gravity="center"
                android:scaleX="2"
                android:scaleY="2"
                android:text="@string/user_login"
                android:textColor="@color/primaryText"
                android:textSize="14sp" />

        </RelativeLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/closeImg"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="right"
        android:scaleType="center"
        android:src="@drawable/close" />
</FrameLayout>